# cakto-mini-split-payment-engine

./: .bandit  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  DOCKER_GUIDE.md  Dockerfile.dev  Dockerfile.prod  Dockerfile.stag  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stag.yml  init-db.sql  nginx.conf  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: deployprod.yml  deploystag.yml  devtests.yml
app/api/: models.py  serializers.py  urls.py  views.py
app/api/migrations/: 0001_initial.py
app/api/tests/: test_edge_cases.py  test_split_calculator.py  test_views.py
app/services/: split_calculator.py
configs/: asgi.py  settings.py  urls.py  wsgi.py
